logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres/attempt=1.log
[2026-03-30T18:15:43.669+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres permission to 509
[2026-03-30T18:15:43.669+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres'
[2026-03-30T18:15:43.694+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres permission to 509
[2026-03-30T18:15:43.695+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres'
[2026-03-30T18:15:43.839+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_empenhos_macapa_v2.processar_json_para_postgres manual__2026-03-30T18:15:40.199222+00:00 [queued]>
[2026-03-30T18:15:43.847+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_empenhos_macapa_v2.processar_json_para_postgres manual__2026-03-30T18:15:40.199222+00:00 [queued]>
[2026-03-30T18:15:43.847+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 1
[2026-03-30T18:15:43.859+0000] {taskinstance.py:1380} INFO - Executing <Task(PythonOperator): processar_json_para_postgres> on 2026-03-30 18:15:40.199222+00:00
[2026-03-30T18:15:43.866+0000] {standard_task_runner.py:57} INFO - Started process 1194 to run task
[2026-03-30T18:15:43.868+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'etl_empenhos_macapa_v2', 'processar_json_para_postgres', 'manual__2026-03-30T18:15:40.199222+00:00', '--job-id', '15', '--raw', '--subdir', 'DAGS_FOLDER/popula_banco.py', '--cfg-path', '/tmp/tmp6dm0jjt6']
[2026-03-30T18:15:43.870+0000] {standard_task_runner.py:85} INFO - Job 15: Subtask processar_json_para_postgres
[2026-03-30T18:15:43.913+0000] {logging_mixin.py:151} INFO - Changing /opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres permission to 509
[2026-03-30T18:15:43.914+0000] {logging_mixin.py:151} INFO - Failed to change /opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres permission to 509: [Errno 1] Operation not permitted: '/opt/***/logs/dag_id=etl_empenhos_macapa_v2/run_id=manual__2026-03-30T18:15:40.199222+00:00/task_id=processar_json_para_postgres'
[2026-03-30T18:15:43.915+0000] {task_command.py:415} INFO - Running <TaskInstance: etl_empenhos_macapa_v2.processar_json_para_postgres manual__2026-03-30T18:15:40.199222+00:00 [running]> on host 7df089d6b2ce
[2026-03-30T18:15:43.984+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_empenhos_macapa_v2' AIRFLOW_CTX_TASK_ID='processar_json_para_postgres' AIRFLOW_CTX_EXECUTION_DATE='2026-03-30T18:15:40.199222+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-03-30T18:15:40.199222+00:00'
[2026-03-30T18:15:43.986+0000] {logging_mixin.py:151} INFO - 🚀 Iniciando ETL de Alta Performance...
[2026-03-30T18:15:43.999+0000] {base.py:73} INFO - Using connection ID 'postgres_transparencia' for task execution.
[2026-03-30T18:15:44.001+0000] {logging_mixin.py:151} INFO - 📂 Processando: /opt/***/data/raw_empenhos_01-01-2023_30-03-2023.json
[2026-03-30T18:15:44.982+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 6:                 SELECT * FROM temp_empenhos
                               ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/popula_banco.py", line 107, in processar_json_para_postgres
    res = conn.execute(query)
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1385, in execute
    return meth(self, multiparams, params, _EMPTY_EXECUTION_OPTS)
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/sql/elements.py", line 334, in _execute_on_connection
    return connection._execute_clauseelement(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1577, in _execute_clauseelement
    ret = self._execute_context(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.10/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) INSERT has more expressions than target columns
LINE 6:                 SELECT * FROM temp_empenhos
                               ^

[SQL: 
                INSERT INTO empenhos (
                    id_empenho, num_empenho, orgao, fornecedor, data_iso,
                    historico, empenhado, liquidado, gasto, row_hash
                )
                SELECT * FROM temp_empenhos
                ON CONFLICT (id_empenho) DO UPDATE SET
                    liquidado = EXCLUDED.liquidado,
                    gasto = EXCLUDED.gasto,
                    historico = EXCLUDED.historico,
                    row_hash = EXCLUDED.row_hash,
                    data_versao = NOW()
                WHERE empenhos.row_hash IS DISTINCT FROM EXCLUDED.row_hash;
            ]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2026-03-30T18:15:44.995+0000] {taskinstance.py:1398} INFO - Marking task as FAILED. dag_id=etl_empenhos_macapa_v2, task_id=processar_json_para_postgres, execution_date=20260330T181540, start_date=20260330T181543, end_date=20260330T181544
[2026-03-30T18:15:45.006+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 15 for task processar_json_para_postgres ((psycopg2.errors.SyntaxError) INSERT has more expressions than target columns
LINE 6:                 SELECT * FROM temp_empenhos
                               ^

[SQL: 
                INSERT INTO empenhos (
                    id_empenho, num_empenho, orgao, fornecedor, data_iso,
                    historico, empenhado, liquidado, gasto, row_hash
                )
                SELECT * FROM temp_empenhos
                ON CONFLICT (id_empenho) DO UPDATE SET
                    liquidado = EXCLUDED.liquidado,
                    gasto = EXCLUDED.gasto,
                    historico = EXCLUDED.historico,
                    row_hash = EXCLUDED.row_hash,
                    data_versao = NOW()
                WHERE empenhos.row_hash IS DISTINCT FROM EXCLUDED.row_hash;
            ]
(Background on this error at: https://sqlalche.me/e/14/f405); 1194)
[2026-03-30T18:15:45.050+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2026-03-30T18:15:45.070+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
